dev: fix footer padding on mobile

--- a/app/assets/sass/patterns/_footer-internal.scss
+++ b/app/assets/sass/patterns/_footer-internal.scss
@@ -74,12 +74,14 @@
 @media (max-width: 1020px) {
   .wrapper-footer__library {
     margin: 0 30px;
+    padding: 15px 0;
   }
 }
 
 @media (max-width: 640px) {
   .wrapper-footer__library {
     margin: 0 15px;
+    padding: 15px 0;
   }
 }
 
